[package]
name = "debctl"
version = "0.1.0"
authors = ["Wren Powell <wrenp@duck.com>"]
edition = "2021"
description = "A CLI tool for working with debian repositories"
homepage = "https://github.com/lostatc/caustic"
repository = "https://github.com/lostatc/caustic"
readme = "README.md"
license = "MIT"
rust-version = "1.71.0"

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
