[package]
name = "debctl"
version = "0.1.0"
authors = ["Wren Powell <wrenp@duck.com>"]
edition = "2021"
description = "A CLI tool for working with Debian repository sources"
homepage = "https://github.com/lostatc/caustic"
repository = "https://github.com/lostatc/caustic"
readme = "README.md"
license = "MIT"
rust-version = "1.71.0"

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
clap = { version = "4.3.12", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
tempfile = "3.6.0"
