[package]
name = "debctl"
version = "0.1.0"
authors = ["Wren Powell <wrenp@duck.com>"]
edition = "2021"
description = "A CLI tool for managing apt repositories"
categories = ["command-line-utilities", "config"]
keywords = ["apt", "debian", "packaging", "repository"]
homepage = "https://github.com/lostatc/debctl"
repository = "https://github.com/lostatc/debctl"
readme = "README.md"
license = "MIT"
rust-version = "1.71.0"

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
clap = { version = "4.3.12", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
tempfile = "3.6.0"
thiserror = "1.0.43"
once_cell = "1.18.0"
regex = "1.9.1"
pest = "2.7.1"
pest_derive = "2.7.1"
strum = "0.25.0"
strum_macros = "0.25.1"
